--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,10 +36,11 @@ img {
   text-justify: inter-word;
 }
 #foot-text {
-  border: 2px solid orange;
-  padding: 1rem;
-  text-align: end;
+  border-top: 1px dotted;
+  padding: 0.75rem 0;
+  text-align: center;
   font-size: 1rem;
+  color: rgb(100, 92, 92);
 }
 
 @media (min-width: 300px) and (max-width: 799px) {
