Made slight modifications to the HTML and CSS files

--- a/styles/tributes.css
+++ b/styles/tributes.css
@@ -17,7 +17,6 @@
   text-justify: inter-word;
 }
 .saying {
-  border: 3px solid red;
   margin-bottom: 2rem;
   text-align: center;
 }
@@ -25,7 +24,7 @@
   font-weight: 800;
 }
 #foot-text {
-  border-top: 1px dotted;
+  /* border-top: 1px dotted; */
   padding: 0.75rem 0;
   text-align: center;
   font-size: 1rem;
