--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -3,6 +3,15 @@
   font-family: "Titillium Web", sans-serif;
   font-size: 1.1rem;
 }
+.navbar-light .navbar-nav .nav-link {
+  color: #7f8487;
+}
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+.navbar-light .navbar-toggler {
+  background-color: #413f42;
+}
 .sec1 {
   text-align: center;
 }
@@ -18,12 +27,16 @@
   z-index: 2;
   display: none;
 }
+/* bootstrap template card has a default border radius, annul without breaking code */
+.card {
+  border-radius: 2rem !important;
+  min-height: 30vh;
+}
 .gallery-cards {
   margin: 1rem;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
-  /* border: 6px solid red; */
 }
 .gallery-cards > div:nth-of-type(1) {
   grid-row: 1/3;
@@ -79,10 +92,7 @@
 .card-49 {
   grid-area: 13/1/15/2;
 }
-.card {
-  border-radius: 2rem !important;
-  min-height: 30vh;
-}
+
 .card > img {
   border: 5px solid;
   min-height: 100%;
@@ -90,12 +100,10 @@
   max-height: 40vh;
 }
 .card-img-overlay {
-  /* border: 5px solid black; */
   position: relative;
 }
 .card-text {
   border-radius: 0 0 2rem 2rem;
-  /* border: 3px solid yellow; */
   position: absolute;
   background-color: gray;
   opacity: 80%;
@@ -112,13 +120,12 @@
   font-size: 1rem;
   color: rgb(100, 92, 92);
 }
-@media (min-width: 300px) and (max-width: 600px) {
+@media (min-width: 300px) and (max-width: 650px) {
   .gallery-cards {
     display: flex;
     flex-direction: column;
   }
   .card {
-    border-radius: 2rem !important;
     height: auto;
   }
   .card > img {
@@ -126,8 +133,11 @@
     max-height: 70vh;
   }
 }
-/* @media (min-width: 601px) and (max-width: 900px) {
+@media (min-width: 650px) and (max-width: 990px) {
   .gallery-cards {
-  grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
-} */
+  .gallery-cards > div:nth-of-type(n) {
+    grid-area: inherit;
+  }
+}
