--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,38 +1,48 @@
 * {
- font-family: 'Exo', sans-serif;
-font-family: 'Titillium Web', sans-serif;
-font-size: 1.1rem;
+  font-family: "Exo", sans-serif;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 1.1rem;
 }
-.home {
-  display: flex;
-  height: 90vh;
-  justify-content: center;
-  align-items: center;
+.navbar-light .navbar-nav .nav-link {
+  color: #000000;
 }
-
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.navbar-light .navbar-toggler {
+  background-color: #413f42;
+}
 video {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -5;
-  max-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100%;
   object-fit: cover;
   opacity: 50%;
+}
+.home {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
 }
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 5px solid red; */
   margin: auto;
   background: rgba(0, 0, 0, 0.5);
   height: 50vh;
-  min-width: 105%;
-  color: aliceblue;
+  min-width: 100%;
+  color: #ededed;
+  position: absolute;
+  top: 60%;
+  transform: translateY(-60%);
 }
 #lander-text {
-  /* border: 4px solid green; */
   width: 100%;
   text-align: center;
 }
