--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,15 @@
   font-family: "Titillium Web", sans-serif;
   font-size: 1.1rem;
 }
+.navbar-light .navbar-nav .nav-link {
+  color: #7f8487;
+}
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.navbar-light .navbar-toggler {
+  background-color: #413f42;
+}
 .container {
   max-width: 100vw !important;
 }
