--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -6,8 +6,8 @@
 .navbar-light .navbar-nav .nav-link {
   color: #7f8487;
 }
-.navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+header > .navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-light .navbar-toggler {
   background-color: #413f42;
@@ -27,16 +27,15 @@
   z-index: 2;
   display: none;
 }
-/* bootstrap template card has a default border radius, annul without breaking code */
-.card {
-  border-radius: 2rem !important;
-  min-height: 30vh;
-}
 .gallery-cards {
   margin: 1rem;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
+}
+.gallery-cards > .card {
+  border-radius: 2rem;
+  min-height: 30vh;
 }
 .gallery-cards > div:nth-of-type(1) {
   grid-row: 1/3;
@@ -120,7 +119,7 @@
   font-size: 1rem;
   color: rgb(100, 92, 92);
 }
-@media (min-width: 300px) and (max-width: 650px) {
+@media (min-width: 240px) and (max-width: 650px) {
   .gallery-cards {
     display: flex;
     flex-direction: column;
